Add malign support. Closes #3

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "predis/predis": "*",
         "webpatser/laravel-uuid": "2.*",
-         "mongodb/mongodb": "*"
+         "mongodb/mongodb": "*",
+         "guzzlehttp/guzzle": "~5.3|~6.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
