--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3"
+        "phpunit/phpunit": "^9.3",
+        "squizlabs/php_codesniffer": "^3.4",
+        "escapestudios/symfony2-coding-standard": "~3.9.0",
+        "phpstan/phpstan": "^0.12.40"
     },
     "config": {
         "optimize-autoloader": true,
